[tool.poetry]
name = "ftqc-wiki"
version = "0.1.0"
description = ""
authors = ["Konrad Jałowiecki <dexter2206@gmail.com>"]
readme = "README.md"
packages = [{include = "ftqcwiki"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.4.14"
qiskit = "^0.45.0"
qiskit-qasm3-import = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
